ftp服务器搭建，及图片上传和下载，nginx访问静态资源配置

--- a/bobo-mall/bobo-common/pom.xml
+++ b/bobo-mall/bobo-common/pom.xml
@@ -30,6 +30,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <!--ftp图片上传-->
         <dependency>
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
